Added UltraPunishments support

--- a/pom.xml
+++ b/pom.xml
@@ -144,6 +144,14 @@
             <version>1.6</version>
             <scope>provided</scope>
         </dependency>
+
+        <!-- Installed this jar on my local .m2 : https://repo.techscode.com/repository/techscode-apis/me/TechsCode/UltraPunishmentsAPI/1.0.1/UltraPunishmentsAPI-1.0.1.jar -->
+        <dependency>
+            <groupId>me.TechsCode</groupId>
+            <artifactId>UltraPunishmentsAPI</artifactId>
+            <version>1.0.1</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <properties>
